--- a/41-redux/sushi-saga/package.json
+++ b/41-redux/sushi-saga/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^7.2.0",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "json-server --watch db.json -p 3000 & open http://localhost:3000/sushis & PORT=3001 react-scripts start && fg",
